--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
+    background-color: rgba(0,0,0,0.1);
 }
 
+.mouth,
+.wirst,
+.foot,
 .head,
 .hand,
 .neck,
@@ -21,9 +25,10 @@ body{
 .knee{
     display: block;
     border: 2px solid black;
-    height: 110px;
-    width: 110px;
+    height: 125px;
+    width: 115px;
     border-radius: 15px/15px;
+    
 }
 
 .head,
@@ -31,6 +36,7 @@ body{
     text-align: center;
     margin: 0 auto;
     background-color: rgba(0,0,0,0.9);
+   
 }
 
 .head{
@@ -43,24 +49,33 @@ body{
 .eye,
 .elbow,
 .knee{
-    border-radius: 50%;
+    border-radius: 40%;
 }
 
+.mouth,
 .eye{
     display: inline-block;
     width: 9px;
     height: 9px;
-    margin-left: 15px;
+    margin-left: 10px;
     margin-top: 25px;
     background-color: white;
 }
 
+.mouth{
+    position: absolute;
+    width: 20px;
+    height: 10px;
+    /* left: 70px; */
+   /*  animation-direction: reverse; */
+}
+
 .neck{
     position: relative;
-    width: 20px;
-    height: 50px;
+    width: 30px;
+    height: 40px;
     border-top:none ;
-    left: 40px;
+    left: 30px;
     border-radius: 0;
 }
 
@@ -69,7 +84,8 @@ body{
     position: relative;
     display: flex;
     margin: 0 auto;
-   width: 170px;
+    justify-content: space-between;
+   width: 150px;
 /*    justify-content: space-between;
  *//*     justify-content: center;  */
 }
@@ -79,31 +95,37 @@ body{
     left: -20px;
     width: 120px;
 }
+
+
 .knee,
 .elbow{
-    width: 50px;
-    height: 50px;
-}
+    width:40px;
+    height:40px;
+   }
 
 .hand{
-    margin: 0 30px;
+    margin: 0 auto;
     position: absolute;
     height: 350px;
-    width: 50px;
+    width: 90px;
     transform-origin: top;
     border: none;
 }
 
+.left .wirst,
+.left .foot,
 .left .knee,
 .left .elbow,
 .left .leg__section__top,
 .left .leg__section__bottom,
 .left .hand__section__top,
 .left .hand__section__bottom{
-    background-color: rgba(0,0,0,0.8);
- 
-}
+    background-color: rgba(0,0,0,0.9);
 
+   }
+
+.right .wirst,
+.right .foot,
 .right .knee,
 .right .elbow,
 .right .leg__section__top,
@@ -111,26 +133,38 @@ body{
 .right .hand__section__top,
 .right .hand__section__bottom{
     background-color: rgba(0,0,0,0.8);
-}
+   }
 
+.foot,
 .leg__section__bottom{
-  /*   transform-origin: top; */
     transform: rotate(25deg) translateX(-55px);
+    width: 50px;
+    height: 220px;
+    transform-origin: top;
+    position: relative;
+    z-index: 80;
 }
-
 .hand__section__top{
   /*   transform-origin: top; */
     transform: /* rotate(-25deg) */ translateX(-15px);
 }
 
+
 .hand__section__top{
     width: 40px;
     height: 150px;
 }
+
 .leg__section__top{
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    justify-content: flex-end;
     width: 55px;
     height: 200px;
+  
 }
+
 
 .hand__section__bottom{
     width: 40px;
@@ -138,21 +172,19 @@ body{
     transform-origin: top;
 }
 
-.leg__section__bottom{
-    width: 50px;
-    height: 250px;
-    transform-origin: top;
-}
+
+
 
 .body{
     position: relative;
     height: 330px;
-    width: 140px;
+    width: 180px;
     margin:0 50px;
     z-index: 50;
   border: none;
    
 }
+
 
 .stomach,
 .hips,
@@ -160,27 +192,36 @@ body{
     height: 80px;
     width: 120px;
     margin:0 auto;
-    background-color: rgba(0,0,0,0.9);
-}
+ 
+   }
+
+   .chest{
+    background-color: rgba(90, 190, 236, 0.9);
+    box-shadow: -30px 0 0 rgba(0,0,0,1);
+   }
 
 .stomach{
     height: 130px;
     width: 60px;
     margin-right: 100px;
+    background-color: rgba(227, 236, 90, 0.9);
+    box-shadow: -30px 0 10px rgba(0,0,0,1);
 }
 
 .hips{
     height: 70px;
-    width: 100px;
-    margin-right: 40px;
+    width: 110px;
+    margin-right: 50px;
+    background-color: rgba(0, 0, 0, 0.9);
+   
 }
 
 .right{ 
     animation-name: right;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
+   /*  animation-fill-mode: backwards; */
     z-index: 10;
 }
 
@@ -189,13 +230,13 @@ body{
         transform:translateX(20px) rotate(0);
     }
     25%{
-        transform:translateX(35px) rotate(65deg);
+        transform:translateX(35px) rotate(35deg);
     }
     50%{
         transform:translateX(20px) rotate(0);
     }
     75%{
-        transform:translateX(35px) rotate(-65deg);
+        transform:translateX(35px) rotate(-35deg);
     }
     100%{
         transform:translateX(20px) rotate(0);
@@ -204,11 +245,11 @@ body{
 
 .left{
     animation-name: left;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
-    z-index: 100;
+/*     animation-fill-mode: backwards; */
+    z-index: 80;
 }
 
 @keyframes left{
@@ -216,13 +257,13 @@ body{
         transform:translateX(0) rotate(0);
     }
     25%{
-        transform:translateX(-15px) rotate(-65deg);
+        transform:translateX(-15px) rotate(-35deg);
     }
     50%{
         transform:translateX(0) rotate(0);
     }
     75%{
-        transform:translateX(-15px) rotate(65deg);
+        transform:translateX(-15px) rotate(35deg);
     }
     100%{
         transform:translateX(0) rotate(0);
@@ -232,14 +273,64 @@ body{
 .leg{
     transform-origin: top;
     animation-direction: reverse;
-
     width: 70px;
     border: none;
 }
+.left .hand__section__bottom,
+.left .hand__section__top,
+.right .hand__section__bottom,
+.right .hand__section__top{
+    z-index: 200;
+}
+
+.foot{
+    position: absolute;
+    top: 250px;
+    left: 10px;
+    width: 100px;
+    height: 20px;
+    transform: rotate(-5deg);
+}
+
+.wirst{
+    width: 30px;
+    height: 80px;
+    position: absolute;
+    top:160px ;
+    left:0 ;
+    transform: rotate(10deg);
+}
+
+/* .foot{ 
+    animation-name: foot;
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-fill-mode: backwards;
+    z-index: 10;
+}
+
+@keyframes foot{
+    0%{
+        transform:translateX(-20px);
+    }
+    25%{
+        transform:translateX(-35px);
+    }
+    50%{
+        transform:translateX(-20px);
+    }
+    75%{
+        transform:translateX(-35px);
+    }
+    100%{
+        transform:translateX(-20px);
+    }
+} */
 
 .hips__move{
     animation-name: hips;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -264,7 +355,7 @@ body{
 
 .chest__move{
     animation-name: chest;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -289,10 +380,10 @@ body{
 
 .hand__skew{ 
     animation-name: hand__skew;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
+/*     animation-fill-mode: backwards; */
     z-index: 10;
 }
 
@@ -301,25 +392,63 @@ body{
         transform:translateX(10px) rotate(0);
     }
     25%{
-        transform:translateX(15px) rotate(-35deg);
+        transform:translateX(15px) rotate(-15deg);
     }
     50%{
-        transform:translateX(20px) rotate(-55deg);
+        transform:translateX(20px) rotate(-25deg);
     }
     75%{
-        transform:translateX(15px) rotate(-35deg);
+        transform:translateX(15px) rotate(-15deg);
     }
     100%{
         transform:translateX(10px) rotate(0);
     }
 }
 
-.leg__skew{ 
-    animation-name: leg__skew;
-    animation-duration: 2s;
+.mouth__move{
+    animation-name: mouth__move;
+    animation-duration: 20s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
+/*     animation-fill-mode: backwards; */
+    z-index: 10;
+}
+
+@keyframes mouth__move{
+    0%{
+        width: 20px;
+        transform: rotate(-10deg) scale(1);
+    }
+    25%{
+        width: 25px;
+        transform: skew(15deg) scale(1.1);
+        border-top-left-radius: 30%;
+        border-top-right-radius: 30%;
+    }
+    50%{
+        width: 30px;
+        transform: skew(25deg) scale(1.2);
+        border-top-left-radius: 50%;
+        border-top-right-radius: 50%;
+    }
+    75%{
+        width: 25px;
+        transform: skew(15deg)  scale(1.1);
+        border-top-left-radius: 30%;
+        border-top-right-radius: 30%;
+    }
+    100%{
+        width: 20px;
+        transform: skew(0) scale(1);
+    }
+}
+
+.leg__skew{ 
+    animation-name: leg__skew;
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+ /*    animation-fill-mode: backwards; */
     z-index: 10;
 }
 
@@ -328,20 +457,32 @@ body{
         transform:translateX(-10px) rotate(0);
     }
     25%{
-        transform:translateX(-15px) rotate(35deg);
+        transform:translateX(-15px) rotate(15deg);
     }
     50%{
-        transform:translateX(-20px) rotate(55deg);
+        transform:translateX(-20px) rotate(25deg);
     }
     75%{
-        transform:translateX(-15px) rotate(35deg);
+        transform:translateX(-15px) rotate(15deg);
     }
     100%{
         transform:translateX(-10px) rotate(0);
     }
 }
 
+.leg .left{
+    z-index: 10;
+}
 
+.hand .left{
+    z-index: 200;
+}
+ .hand:first-child {
+    position: absolute;
+  left: 80px;
+  top: 20px;
+  transform: scale(0.9);
+}
 
 /* .hand .right{
     left: 100px;
