--- a/style.css
+++ b/style.css
@@ -2,23 +2,34 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-    background-color: rgba(0,0,0,0.1);
 }
 
 .wrapper{
     display: block;
-    margin: 400px auto;
+    margin: 0 auto;
 }
 
 .crowd{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     list-style: none;
+    padding: 0;
+    margin: 0 10vw;
+    height: 150px;
 }
 
+
 /* li:nth-child(even).human{
-    margin-top: 200px;
+    margin-top: 50px;
 } */
+
+.crowd li{
+    transform: scale(0.1) rotate(-2deg);
+
+    margin: 20px;
+    height: 120px;
+}
 
 .stick,
 .flag,
@@ -200,7 +211,7 @@ body{
    }
 
    .chest{
-    background-color: rgba(90, 190, 236, 1);
+    /* background-color: rgba(90, 190, 236, 1); */
     box-shadow: -30px 0 0 rgba(0,0,0,1);
    }
 
@@ -292,7 +303,7 @@ body{
     left: 10px;
     width: 100px;
     height: 20px;
-    transform: rotate(-5deg);
+    /* transform: rotate(15deg); */
 }
 .stick,
 .wirst{
@@ -312,6 +323,53 @@ body{
     left: -300px;
     background-color: rgba(0,0,0,0.8);
     transform: rotate(-250deg);
+}
+
+.kosa img,
+.AK img,
+.sniperrefile img,
+.refile img,
+.case img{
+    width: 180px;
+    height: 180px;
+    position: absolute;
+    transform-origin: top;
+    top:160px ;
+    left:-65px   ; 
+}
+/* 
+.wings img{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    transform-origin: top;
+    transform: skew(45deg,45deg);
+    top:0 ;
+    left:0;
+} */
+
+.refile img{
+   transform: scale(3);
+   top:0 ;
+   left:0   ; 
+}
+
+.sniperrefile img{
+    transform: scale(3);
+    top:0 ;
+    left:0   ;
+}
+
+.AK img{
+    transform:scale(3) rotate(45deg);
+    top:20px ;
+    left:130px; 
+}
+
+.kosa img{
+    transform:scale(3) rotate(55deg);
+    top:-220px ;
+    left:350px;
 }
 
 .flag{
@@ -361,7 +419,7 @@ body{
 .hips__move{
     animation-name: hips;
     animation-duration: 1.5s;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
 }
 
@@ -370,13 +428,13 @@ body{
         transform:translateX(-10px) rotate(0);
     }
     25%{
-        transform:translateX(-35px) rotate(15deg);
+        transform:translateX(-30px) rotate(10deg);
     }
     50%{
         transform:translateX(-20px) rotate(0);
     }
     75%{
-        transform:translateX(-35px) rotate(-15deg);
+        transform:translateX(-30px) rotate(-10deg);
     }
     100%{
         transform:translateX(-10px) rotate(0);
@@ -386,7 +444,7 @@ body{
 .chest__move{
     animation-name: chest;
     animation-duration: 1.5s;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
 }
 
@@ -395,13 +453,13 @@ body{
         transform:translateX(-30px) rotate(0);
     }
     25%{
-        transform:translateX(-35px) rotate(-15deg);
+        transform:translateX(-35px) rotate(-5deg);
     }
     50%{
         transform:translateX(-40px) rotate(0);
     }
     75%{
-        transform:translateX(-35px) rotate(15deg);
+        transform:translateX(-35px) rotate(5deg);
     }
     100%{
         transform:translateX(-30px) rotate(0);
@@ -411,9 +469,9 @@ body{
 .hand__skew{ 
     animation-name: hand__skew;
     animation-duration: 1.5s;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-/*     animation-fill-mode: backwards; */
+    animation-fill-mode: backwards;
     z-index: 10;
 }
 
@@ -438,7 +496,7 @@ body{
 .mouth__move{
     animation-name: mouth__move;
     animation-duration: 20s;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
 /*     animation-fill-mode: backwards; */
     z-index: 10;
@@ -476,9 +534,8 @@ body{
 .leg__skew{ 
     animation-name: leg__skew;
     animation-duration: 1.5s;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
- /*    animation-fill-mode: backwards; */
     z-index: 10;
 }
 
@@ -500,6 +557,31 @@ body{
     }
 }
 
+.foot__skew{ 
+    animation-name: foot__skew;
+    animation-duration: 1.5s;
+    animation-timing-function:ease-in;
+    animation-iteration-count: infinite;
+    z-index: 10;
+}
+
+@keyframes foot__skew{
+    0%{
+        transform:translateX(-10px) rotate(0);
+    }
+    25%{
+        transform:translateX(-15px) rotate(15deg);
+    }
+    50%{
+        transform:translateX(-30px) rotate(20deg);
+    }
+    75%{
+        transform:translateX(-15px) rotate(15deg);
+    }
+    100%{
+        transform:translateX(-10px) rotate(0);
+    }
+}
 .leg .left{
     z-index: 10;
 }
@@ -509,7 +591,7 @@ body{
 }
  .hand:first-child {
     position: absolute;
-  left: 80px;
+  left: 65px;
   top: 20px;
   transform: scale(0.9);
 }
@@ -521,9 +603,17 @@ body{
     display: none;
 }
 
-/* .hand .right{
-    left: 100px;
+.fade{
+    animation-name: fade;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
 }
-.hand .left{
-    left: -100px;
-} */
+
+@keyframes fade{
+    from{
+       opacity: 0;
+    }
+    to{
+      opacity: 1;
+    }
+}
