--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body{
 .wrapper{
     display: flex;
     width: 100%;
-    justify-content: space-between;
-    margin: 0 auto;
+    justify-content: flex-start;
+    align-items:center;
 }
 
 .crowd{
