--- a/style.css
+++ b/style.css
@@ -382,8 +382,30 @@ li:nth-child(even).human{
    left:0; 
 }
 
-.human:first-child .left .hand__section__bottom{
-transform:rotate(90deg);
+.human:first-child .left .hand__section__bottom .left__skew{
+    animation-name: left__skew;
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    z-index: 80;
+}
+
+@keyframes left__skew{
+    0%{
+        transform:translateX(0) rotate(0);
+    }
+    25%{
+        transform:translateX(-15px) rotate(-90deg);
+    }
+    50%{
+        transform:translateX(0) rotate(0);
+    }
+    75%{
+        transform:translateX(-15px) rotate(90deg);
+    }
+    100%{
+        transform:translateX(0) rotate(0);
+    }
 }
 
 .bazooka img{
