--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ li:nth-child(even).human{
 }
 
  .left__skew{
-        transform:translateX(0) rotate(90deg);
+        transform: translateX(-15px) rotate(-90deg);
     }
 
 .bazooka img{
