--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ li:nth-child(even).human{
 .bazooka img{
 transform: scale(3) rotate(180deg);
 left:-100px;
-top:400px;
+top:0;
 }
 
 .sniperrefile img{
