--- a/style.css
+++ b/style.css
@@ -22,10 +22,9 @@ body{
    /*  height: 150px; */
 }
 
-
-li:nth-child(even).human{
+/*li:nth-child(even).human{
     margin-top: 100px;
-}
+}*/
 
 .crowd li{
     transform: scale(0.1) rotate(-2deg);
