--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 body{
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 100vw;
 }
 
 .wrapper{
     display: flex;
-    width: 100vw;
-    height: 100vh;
     justify-content: space-between;
     align-items: center;
 /*     background:url("img/appocal.jpg") no-repeat 50% 50%;
- */    margin: 0 auto;
+ */    background-size: cover;
+    margin: 0;
+    margin-right: 50%;
+    overflow: hidden;
 }
 
 .crowd{
-    max-width: 50%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
-    margin: 0 auto;
-   /*  height: 150px; */
+    margin: 0;
+    height: 100vh;
 }
 
 
@@ -33,9 +33,36 @@ body{
 
 .crowd li{
     transform: scale(0.1) rotate(-2deg);
-/* 
-    margin: 10px;
-    height: 120px; */
+   
+}
+
+.tank{
+    align-items: center;
+}
+
+
+.tank img{
+    display: block;
+    margin: 0 auto;
+    position: absolute;
+    transform: scale(0.4);
+    animation-name: tank;
+    animation-timing-function: linear;
+    animation-duration: 15s;
+    animation-iteration-count: 1;
+    transform-origin: top;
+    top: 400px;
+}
+
+@keyframes tank{
+    from{
+        top: 50%;
+        left: 50%;
+    }
+    to{
+        top: 30%;
+        left: 0%;
+    }
 }
 
 .stick,
@@ -179,10 +206,8 @@ body{
 
 
 .leg__section__top{
-    display: flex;
-    flex-direction: column;
-    align-content: flex-end;
-    justify-content: flex-end;
+    transform-origin: top;
+    position: relative;
     width: 55px;
     height: 200px;
 }
@@ -234,6 +259,7 @@ body{
     margin:0 50px;
     z-index: 50;
   border: none;
+  transition: 1s;
 }
 
 .stomach,
@@ -247,6 +273,7 @@ body{
    .chest{
     background-color: rgba(90, 190, 236, 1);
     box-shadow: -30px 0 0 rgba(0,0,0,0.9);
+    transform:translateX(-30px) rotate(0);
    }
 
 .stomach{
@@ -269,7 +296,8 @@ body{
     animation-name: right;
     animation-duration: 1.5s;
     animation-timing-function: linear;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
+    transform:translateX(20px) rotate(0);
     z-index: 10;
 }
 
@@ -295,7 +323,7 @@ body{
     animation-name: left;
     animation-duration: 1.5s;
     animation-timing-function: linear;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
     z-index: 80;
 }
 
@@ -418,7 +446,7 @@ body{
     animation-name: flag;
     animation-duration: 5s;
     animation-timing-function: linear;
-    animation-iteration-count: infinite;  
+    animation-iteration-count: 2;  
     border-radius: 0;
 }
 
@@ -458,7 +486,8 @@ body{
     animation-name: hips;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
+    transform:translateX(-10px) rotate(0);
 }
 
 @keyframes hips{
@@ -483,7 +512,7 @@ body{
     animation-name: chest;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
 }
 
 @keyframes chest{
@@ -508,7 +537,7 @@ body{
     animation-name: hand__skew;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
     animation-fill-mode: backwards;
     z-index: 10;
 }
@@ -572,7 +601,7 @@ body{
     animation-name: leg__skew;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
     z-index: 10;
 }
 
@@ -594,11 +623,38 @@ body{
     }
 }
 
+.rpg__leg__skew{ 
+    animation-name: rpg__leg__skew;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+    z-index: 10;
+}
+
+@keyframes rpg__leg__skew{
+    0%{
+        transform:translateX(-10px) rotate(0);
+    }
+    25%{
+        transform:translateX(-15px) rotate(15deg);
+    }
+    50%{
+        transform:translateX(-20px) rotate(25deg);
+    }
+    75%{
+        transform:translateX(-15px) rotate(15deg);
+    }
+    100%{
+        transform:translateX(-10px) rotate(0);
+    }
+}
+
 .foot__skew{ 
     animation-name: foot__skew;
     animation-duration: 1.5s;
     animation-timing-function:ease-in;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
     z-index: 10;
 }
 
@@ -620,33 +676,7 @@ body{
     }
 }
 
-.rpg__hand__skew{ 
-    transform:rotate(-140deg) 
-    /* animation-name: rpg__hand__skew;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
-    z-index: 10; */
-}
 
-/* @keyframes rpg__hand__skew{
-    0%{
-        transform:rotate(90deg) ;
-    }
-    25%{
-        transform:rotate(-90deg) ;
-    }
-    50%{
-        transform:rotate(90deg) ;
-    }
-    75%{
-        transform:rotate(-90deg) ;
-    }
-    100%{
-        transform:rotate(90deg) ;
-    }
-} */
 
 .leg .left{
     z-index: 10;
@@ -681,25 +711,51 @@ body{
     }
 }
 
+.rpg__human .rpg__right__hand__skew,
+.rpg__human .rpg__left__hand__skew{ 
+    transition: all 1s;
+    transform:rotate(-140deg); 
+}
 
 
-.tank img{
+ .left__leg__section__bottom{
+    transition: all 1s;
+    transform: rotate(100deg);
+}
+
+.right__leg__section__bottom,
+.right__knee{
+    transform: translate(170px,-200px);
+}
+
+ .right__leg__section__top{
+    transform: rotate(-80deg);
+}
+
+ .rpg__foot{
+    transition: all 1s;
+    transform: translateX(0);
+}
+
+
+img.rocket{
     display: block;
-    margin: 0 auto;
-    position: absolute;
-    transform: scale(0.4);
-    animation-name: tank;
-    animation-timing-function: linear;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-    transform-origin: top;
+    width: 100px;
+    height: auto;
+    margin-top: 210px;
 }
 
-@keyframes tank{
-    from{
-        left: 100%;
-    }
-    to{
-        left: 5%;
-    }
+img.rocket__launch{
+    transition: all linear 1s;
+    transform: translate(-10000px,8000px);
 }
+
+/* .rpg__human{
+    animation-iteration-count: unset;
+} */
+
+.rpg__human .crowd .rpg__human__body{
+    transform: translateY(300px);
+}
+
+
